# libjsonsm

./: .gitignore  CMakeLists.txt  Makefile
cmake/: config-cmake.h.in  defs.mk.in  source_files.cmake
cmake/Modules/: DistScript.cmake  FindProfiler.cmake  GenerateConfigDotH.cmake  GetLibraryFlags.cmake  GetPlatformCCInfo.cmake  GetVersionInfo.cmake
cmake/distinfo/: distinfo.cmake.in
contrib/jsonsl/: jsonsl.c
include/libjsonsm/: configuration.h.in  jsonsm.h
src/: config_static.h  expression_json.c  expression_str.c  internal.h  matcher.c  version.c
tests/: CMakeLists.txt  expression_tests.cc  slow_matcher_tests.cc
tools/: CMakeLists.txt  jsm.c
